--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "example" : "example",
         "test" : "test"
    }
-, "engines" : { "node" : "*" }
+, "engines" : { "node" : ">=0.10.0" }
 , "devDependencies": {
     "mocha": "*"
   }
